Fixed overflowing lp logo in the footer in ie

--- a/app/assets/stylesheets/_core/_media.sass
+++ b/app/assets/stylesheets/_core/_media.sass
@@ -30,25 +30,13 @@
 .media--lp-logo--footer
   position: relative
   &:before
-    width: 84px
-    height: 44px
     @extend %empty-abs-generated-content
     @extend %sprite-core--standard
+    width: 90px
+    height: 44px
     top: 0
     left: 0
-    background-position: 0 2px
-    background-size: 140px
-
-.ie7, .ie8
-  .media--lp-logo--footer
-    background-image: image_url("core/lp-logo--small.png")
-    background-position: 0 2px
-    background-repeat: no-repeat
-
-.ie8
-  .media--lp-logo--footer
-    &:before
-      display: none
+    background-position: 0 -218px
 
 // ----------------------------------------------------------------------------
 // 
