--- a/app/assets/stylesheets/_core/_text.sass
+++ b/app/assets/stylesheets/_core/_text.sass
@@ -5,6 +5,6 @@
 
 .text--legal
   margin: 21px 0
-  padding: 6px 0 6px 90px
+  padding: 6px 0 6px 100px
   line-height: 1.5em
   width: 600px
